--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Урок 10</title>
+    <title>Урок 9</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -13,21 +13,23 @@
 <body>
     <header class="heder">
         <div class="heder__content">
-            <nav class="heder__content_nav">
-                <ol class="content_nav__link">
-                    <li><a href="./index.html">Главная</a></li>
-                    <li><a href="./index.html">Об авторе</a></li>
-                    <li><a href="./index.html">Работы</a></li>
-                    <li><a href="./index.html">Процесс</a></li>
-                    <li><a href="./index.html">Контакты</a></li>
-                </ol>
-            </nav>
-            <div class="heder__content_title">
-                <h1>Дизайн и верстка</h1>
-                <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
-                   Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+            <div class="heder__content_conteiner">
+                <nav class="heder__content_nav">
+                    <ol class="content_nav__link">
+                        <li><a href="./index.html">Главная</a></li>
+                        <li><a href="./index.html">Об авторе</a></li>
+                        <li><a href="./index.html">Работы</a></li>
+                        <li><a href="./index.html">Процесс</a></li>
+                        <li><a href="./index.html">Контакты</a></li>
+                    </ol>
+                </nav>
+                <div class="heder__content_title">
+                    <h1>Дизайн и верстка</h1>
+                    <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                       Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                </div>
+                <button class="heder__content_buttun">Написать мне</button>
             </div>
-            <button class="heder__content_buttun">Написать мне</button>
         </div>
     </header>
     <main>
@@ -99,8 +101,10 @@
     </main>
     <footer>
         <div class="footern__content">
-            <h3>Иванов Иван</h3>
-            <p>(с) 2018. Все права защищены.</p>
+            <div class="footern__content_conteiner">
+                <h3>Иванов Иван</h3>
+                <p>(с) 2018. Все права защищены.</p>
+            </div>
         </div>
     </footer>
      
